# third_party_glib

./: .gitattributes  BUILD.gn  OAT.xml  README.OpenSource  README.en.md  README.md  bundle.json  config.gni  config.h  glib2.spec  install.sh  meson.build
gio/: gdbus-daemon-generated.c  gdbus-daemon-generated.h  gioenumtypes.c  glocalfileoutputstream.c  meson.build  xdp-dbus.c  xdp-dbus.h
gio/tests/: file.c
glib/: gatomic.h  ggettext.c  gi18n-lib.h  gi18n.h  glibconfig.h  gregex.c  gscanner.c  gslice.c  gstrfuncs.h  gthread-posix.c  gvariant-core.c  gvariant-serialiser.c  meson.build
glib/tests/: gvariant.c  meson.build  regex.c
glibmemdfx/: gmemdfx.cpp  gmemdfx.h  gmemdfxdump.h
gobject/: gclosure.c  glib-enumtypes.c
patch/: backport-Add-D-Bus-object-subtree-unregistration-tests.patch  backport-Add-lock-in-_g_get_unix_mount_points-around-fsent-functions.patch  backport-CVE-2023-24593_CVE-2023-25180-1.patch  backport-CVE-2023-24593_CVE-2023-25180-2.patch  backport-CVE-2024-34397.patch  backport-Fix-memory-leak-in-gdbusauthmechanismsha1.patch  backport-Handling-collision-between-standard-i-o-file-descriptors-and-newly-created-ones.patch  backport-Implement-GFileIface.set_display_name-for-resource-files.patch  backport-Make-sure-the-GTask-is-freed-on-a-graceful-disconnect.patch  backport-Revert-Handling-collision-between-standard-i-o-filedescriptors-and-newly-created-ones.patch  backport-add-OOM-handling-in-mimemagic.patch  backport-add-g_free_sized-and-g_aligned_free_sized.patch  backport-add-version-macros-for-GLib-2.74.patch  backport-application-Unset-the-registered-state-after-shutting-down.patch  backport-correctly-use-3-parameters-for-clise-range.patch  backport-documentportal-Fix-small-leak-in-add_documents-with-empty-URI-list.patch  backport-fix-a-memory-leak.patch  backport-g_get_unix_mount_points-reduce-syscalls-inside-loop.patch  backport-gapplication-fix-arguments-leak-in-error-path.patch  backport-garray-Fix-integer-overflows-in-element-capacity-calculations.patch  backport-garray-buffer-overflow-fix.patch  backport-gdbusauth-fix-error-leak.patch  backport-gdbusconnection-Add-some-ownership-annotations.patch  backport-gdbusconnection-Fix-double-unref-on-timeout-cancel-sending-a-message.patch  backport-gdbusconnection-Fix-race-between-method-calls-and-object-unregistration.patch  backport-gdbusconnection-Fix-race-between-subtree-method-call-and-unregistration.patch  backport-gdbusconnection-Make-ExportedInterface-ExportedSubtree-refcounted.patch  backport-gdbusconnection-Move-ExportedSubtree-definition.patch  backport-gdbusinterfaceskeleton-Fix-a-use-after-free-of-a-GDBusMethodInvocation.patch  backport-gdbusmessage-Disallow-zero-length-elements-in-arrays.patch  backport-gdbusmethodinvocation-Drop-redundant-quote-from-warning.patch  backport-gdbusmethodinvocation-Fix-a-leak-on-an-early-return-path.patch  backport-gdbusmethodinvocation-Fix-dead-code-for-type-checking-GetAll.patch  backport-gdbusobjectmanagerservice-fix-leak-in-error-path.patch  backport-gdesktopappinfo-Unref-the-GDBus-call-results.patch  backport-gdtlsconnection-Fix-a-check-for-a-vfunc-being-implemented.patch  backport-gfileenumerator-fix-leak-in-error-path.patch  backport-gio-tests-gdbus-peer-Unref-cached-property-GVariant-value.patch  backport-gio-tests-gdbus-proxy-threads-Unref-GVariant-s-that-we-own.patch  backport-gio-tool-Fix-a-minor-memory-leak.patch  (+76 more)
