# Copyright (c) Huawei Technologies Co., Ltd. 2021. All rights reserved.

import("//build/ohos.gni")

glib_path = rebase_path("//third_party/glib")
exec_script("install.sh", [ "$glib_path" ])

PCRE2_LIB_DIR = "//third_party/pcre2/pcre2"

ohos_shared_library("glibpcre") {
  md5_check_script = rebase_path("$PCRE2_LIB_DIR/check_md5.sh")
  _arguments_config = [
    rebase_path("$PCRE2_LIB_DIR/src/config.h.generic"),
    rebase_path("$PCRE2_LIB_DIR/src/config.h"),
  ]

  check_config_result =
      exec_script(md5_check_script, _arguments_config, "string")
  if (check_config_result == "") {
    exec_script("/usr/bin/env",
                [
                  "cp",
                  rebase_path("$PCRE2_LIB_DIR/src/config.h.generic"),
                  rebase_path("$PCRE2_LIB_DIR/src/config.h"),
                ])
  }

  _arguments_pcre2 = [
    rebase_path("$PCRE2_LIB_DIR/src/pcre2.h.generic"),
    rebase_path("$PCRE2_LIB_DIR/src/pcre2.h"),
  ]

  check_pcre2_result = exec_script(md5_check_script, _arguments_pcre2, "string")
  if (check_pcre2_result == "") {
    exec_script("/usr/bin/env",
                [
                  "cp",
                  rebase_path("$PCRE2_LIB_DIR/src/pcre2.h.generic"),
                  rebase_path("$PCRE2_LIB_DIR/src/pcre2.h"),
                ])
  }

  _arguments_pcre2_chartables = [
    rebase_path("$PCRE2_LIB_DIR/src/pcre2_chartables.c.dist"),
    rebase_path("$PCRE2_LIB_DIR/src/pcre2_chartables.c"),
  ]

  check_pcre2_chartables_result =
      exec_script(md5_check_script, _arguments_pcre2_chartables, "string")
  if (check_pcre2_chartables_result == "") {
    exec_script("/usr/bin/env",
                [
                  "cp",
                  rebase_path("$PCRE2_LIB_DIR/src/pcre2_chartables.c.dist"),
                  rebase_path("$PCRE2_LIB_DIR/src/pcre2_chartables.c"),
                ])
  }
  sources = [
    "$PCRE2_LIB_DIR/src/pcre2_auto_possess.c",
    "$PCRE2_LIB_DIR/src/pcre2_chartables.c",
    "$PCRE2_LIB_DIR/src/pcre2_compile.c",
    "$PCRE2_LIB_DIR/src/pcre2_config.c",
    "$PCRE2_LIB_DIR/src/pcre2_context.c",
    "$PCRE2_LIB_DIR/src/pcre2_convert.c",
    "$PCRE2_LIB_DIR/src/pcre2_dfa_match.c",
    "$PCRE2_LIB_DIR/src/pcre2_error.c",
    "$PCRE2_LIB_DIR/src/pcre2_extuni.c",
    "$PCRE2_LIB_DIR/src/pcre2_find_bracket.c",
    "$PCRE2_LIB_DIR/src/pcre2_jit_compile.c",
    "$PCRE2_LIB_DIR/src/pcre2_maketables.c",
    "$PCRE2_LIB_DIR/src/pcre2_match.c",
    "$PCRE2_LIB_DIR/src/pcre2_match_data.c",
    "$PCRE2_LIB_DIR/src/pcre2_newline.c",
    "$PCRE2_LIB_DIR/src/pcre2_ord2utf.c",
    "$PCRE2_LIB_DIR/src/pcre2_pattern_info.c",
    "$PCRE2_LIB_DIR/src/pcre2_script_run.c",
    "$PCRE2_LIB_DIR/src/pcre2_serialize.c",
    "$PCRE2_LIB_DIR/src/pcre2_string_utils.c",
    "$PCRE2_LIB_DIR/src/pcre2_study.c",
    "$PCRE2_LIB_DIR/src/pcre2_substitute.c",
    "$PCRE2_LIB_DIR/src/pcre2_substring.c",
    "$PCRE2_LIB_DIR/src/pcre2_tables.c",
    "$PCRE2_LIB_DIR/src/pcre2_ucd.c",
    "$PCRE2_LIB_DIR/src/pcre2_valid_utf.c",
    "$PCRE2_LIB_DIR/src/pcre2_xclass.c",
  ]
  include_dirs = [ "$PCRE2_LIB_DIR/src" ]
  cflags = [
    "-D_GNU_SOURCE",
    "-DHAVE_CONFIG_H",
    "-DSUPPORT_PCRE2_8=1",
    "-DPCRE2_CODE_UNIT_WIDTH=8",
    "-w",
  ]
  part_name = "glib"
  subsystem_name = "thirdparty"
}

group("glib_packages") {
  deps = [
    ":glib",
    ":gmodule",
    ":gobject",
  ]
}

config("glib_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "glib-2.68.1",
    "glib-2.68.1/libcharset",
    "glib-2.68.1/glib",
    "glib-2.68.1/glib/deprecated",
    "//third_party/pcre2/pcre2/src",
    "//foundation/multimedia/media_standard/services/utils",
    "glibmemdfx",
  ]
  cflags = [
    "-DG_LOG_DOMAIN=\"GLib\"",
    "-DGLIB_CHARSETALIAS_DIR=\"system/lib64\"",
    "-DHAVE_MEMMOVE",
    "-DSUPPORT_UCP",
    "-DSUPPORT_UTF",
    "-DSUPPORT_UTF8",
    "-DNEWLINE=-1",
    "-DMATCH_LIMIT=10000000",
    "-DMATCH_LIMIT_RECURSION=8192",
    "-DMAX_NAME_SIZE=32",
    "-DMAX_NAME_COUNT=10000",
    "-DMAX_DUPLENGTH=30000",
    "-DLINK_SIZE=2",
    "-DPOSIX_MALLOC_THRESHOLD=10",
    "-DOHOS_OPT_COMPAT",
    "-UBSR_ANYCRLF",
    "-UEBCDIC",
    "-DGLIB_COMPILATION",
    "-Wno-sign-compare",
    "-Wno-unused-value",
    "-Wno-unused-function",
    "-Wno-int-conversion",
  ]
  if (is_standard_system) {
    cflags += [
      "-DG_MEM_DFX",
      "-DOHOS_OPT_PERFORMANCE",
    ]
  }
}

ohos_source_set("glib_source") {
  sources = [
    "glib-2.68.1/glib/deprecated/gallocator.c",
    "glib-2.68.1/glib/deprecated/gcache.c",
    "glib-2.68.1/glib/deprecated/gcompletion.c",
    "glib-2.68.1/glib/deprecated/grel.c",
    "glib-2.68.1/glib/deprecated/gthread-deprecated.c",
    "glib-2.68.1/glib/garcbox.c",
    "glib-2.68.1/glib/garray.c",
    "glib-2.68.1/glib/gasyncqueue.c",
    "glib-2.68.1/glib/gatomic.c",
    "glib-2.68.1/glib/gbacktrace.c",
    "glib-2.68.1/glib/gbase64.c",
    "glib-2.68.1/glib/gbitlock.c",
    "glib-2.68.1/glib/gbookmarkfile.c",
    "glib-2.68.1/glib/gbytes.c",
    "glib-2.68.1/glib/gcharset.c",
    "glib-2.68.1/glib/gchecksum.c",
    "glib-2.68.1/glib/gconvert.c",
    "glib-2.68.1/glib/gdataset.c",
    "glib-2.68.1/glib/gdate.c",
    "glib-2.68.1/glib/gdatetime.c",
    "glib-2.68.1/glib/gdir.c",
    "glib-2.68.1/glib/genviron.c",
    "glib-2.68.1/glib/gerror.c",
    "glib-2.68.1/glib/gfileutils.c",
    "glib-2.68.1/glib/ggettext.c",
    "glib-2.68.1/glib/ghash.c",
    "glib-2.68.1/glib/ghmac.c",
    "glib-2.68.1/glib/ghook.c",
    "glib-2.68.1/glib/ghostutils.c",
    "glib-2.68.1/glib/giochannel.c",
    "glib-2.68.1/glib/giounix.c",
    "glib-2.68.1/glib/gkeyfile.c",
    "glib-2.68.1/glib/glib-init.c",
    "glib-2.68.1/glib/glib-private.c",
    "glib-2.68.1/glib/glib-unix.c",
    "glib-2.68.1/glib/glist.c",
    "glib-2.68.1/glib/gmain.c",
    "glib-2.68.1/glib/gmappedfile.c",
    "glib-2.68.1/glib/gmarkup.c",
    "glib-2.68.1/glib/gmem.c",
    "glib-2.68.1/glib/gmessages.c",
    "glib-2.68.1/glib/gnode.c",
    "glib-2.68.1/glib/goption.c",
    "glib-2.68.1/glib/gpattern.c",
    "glib-2.68.1/glib/gpoll.c",
    "glib-2.68.1/glib/gprimes.c",
    "glib-2.68.1/glib/gprintf.c",
    "glib-2.68.1/glib/gqsort.c",
    "glib-2.68.1/glib/gquark.c",
    "glib-2.68.1/glib/gqueue.c",
    "glib-2.68.1/glib/grand.c",
    "glib-2.68.1/glib/grcbox.c",
    "glib-2.68.1/glib/grefcount.c",
    "glib-2.68.1/glib/grefstring.c",
    "glib-2.68.1/glib/gregex.c",
    "glib-2.68.1/glib/gscanner.c",
    "glib-2.68.1/glib/gsequence.c",
    "glib-2.68.1/glib/gshell.c",
    "glib-2.68.1/glib/gslice.c",
    "glib-2.68.1/glib/gslist.c",
    "glib-2.68.1/glib/gspawn.c",
    "glib-2.68.1/glib/gstdio.c",
    "glib-2.68.1/glib/gstrfuncs.c",
    "glib-2.68.1/glib/gstring.c",
    "glib-2.68.1/glib/gstringchunk.c",
    "glib-2.68.1/glib/gtestutils.c",
    "glib-2.68.1/glib/gthread-posix.c",
    "glib-2.68.1/glib/gthread.c",
    "glib-2.68.1/glib/gthreadpool.c",
    "glib-2.68.1/glib/gtimer.c",
    "glib-2.68.1/glib/gtimezone.c",
    "glib-2.68.1/glib/gtrace.c",
    "glib-2.68.1/glib/gtranslit.c",
    "glib-2.68.1/glib/gtrashstack.c",
    "glib-2.68.1/glib/gtree.c",
    "glib-2.68.1/glib/gunibreak.c",
    "glib-2.68.1/glib/gunicollate.c",
    "glib-2.68.1/glib/gunidecomp.c",
    "glib-2.68.1/glib/guniprop.c",
    "glib-2.68.1/glib/guri.c",
    "glib-2.68.1/glib/gutf8.c",
    "glib-2.68.1/glib/gutils.c",
    "glib-2.68.1/glib/gutilsprivate.h",
    "glib-2.68.1/glib/guuid.c",
    "glib-2.68.1/glib/gvariant-core.c",
    "glib-2.68.1/glib/gvariant-parser.c",
    "glib-2.68.1/glib/gvariant-serialiser.c",
    "glib-2.68.1/glib/gvariant.c",
    "glib-2.68.1/glib/gvarianttype.c",
    "glib-2.68.1/glib/gvarianttypeinfo.c",
    "glib-2.68.1/glib/gversion.c",
    "glib-2.68.1/glib/gwakeup.c",
    "glib-2.68.1/glib/libcharset/localcharset.c",
  ]

  configs = [ ":glib_config" ]
}
ohos_shared_library("glib") {
  deps = [
    ":glib_source",
    "//third_party/glib:glibpcre",
  ]
  if (is_standard_system) {
    deps += [ ":g_mem_dfx" ]
  }
  part_name = "glib"
  subsystem_name = "thirdparty"
}

config("gmodule_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "glib-2.68.1",
    "glib-2.68.1/gmodule",
    "glib-2.68.1/glib",
  ]
  cflags = [ "-DG_LOG_DOMAIN=\"GModule\"" ]
}

ohos_source_set("gmodule_source") {
  sources = [ "glib-2.68.1/gmodule/gmodule.c" ]

  configs = [ ":gmodule_config" ]
}
ohos_shared_library("gmodule") {
  deps = [
    ":glib",
    ":gmodule_source",
  ]
  part_name = "glib"
  subsystem_name = "thirdparty"
}

config("gobject_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "glib-2.68.1",
    "glib-2.68.1/gobject",
    "glib-2.68.1/glib",
    "//third_party/libffi/include",
  ]
  cflags = [
    "-DG_LOG_DOMAIN=\"GObject\"",
    "-DGOBJECT_COMPILATION",
    "-Wno-sign-compare",
    "-Wno-unused-function",
    "-Wno-int-conversion",
  ]
}

ohos_source_set("gobject_source") {
  sources = [
    "glib-2.68.1/gobject/gatomicarray.c",
    "glib-2.68.1/gobject/gbinding.c",
    "glib-2.68.1/gobject/gboxed.c",
    "glib-2.68.1/gobject/gclosure.c",
    "glib-2.68.1/gobject/genums.c",
    "glib-2.68.1/gobject/gmarshal.c",
    "glib-2.68.1/gobject/gobject.c",
    "glib-2.68.1/gobject/gparam.c",
    "glib-2.68.1/gobject/gparamspecs.c",
    "glib-2.68.1/gobject/gsignal.c",
    "glib-2.68.1/gobject/gsourceclosure.c",
    "glib-2.68.1/gobject/gtype.c",
    "glib-2.68.1/gobject/gtypemodule.c",
    "glib-2.68.1/gobject/gtypeplugin.c",
    "glib-2.68.1/gobject/gvalue.c",
    "glib-2.68.1/gobject/gvaluearray.c",
    "glib-2.68.1/gobject/gvaluetransform.c",
    "glib-2.68.1/gobject/gvaluetypes.c",
  ]

  configs = [ ":gobject_config" ]
}

ohos_shared_library("gobject") {
  deps = [
    ":glib",
    ":gobject_source",
    "//third_party/libffi:ffi",
  ]
  part_name = "glib"
  subsystem_name = "thirdparty"
}

#############################################################################
#############################################################################
#############################################################################

config("g_mem_dfx_config") {
  include_dirs = [
    "glib-2.68.1/glibmemdfx",
    "//commonlibrary/c_utils/base/include",
    "//foundation/multimedia/media_standard/interfaces/inner_api/native",
    "//base/hiviewdfx/hisysevent/interfaces/native/innerkits/hisysevent/include",
  ]
}

ohos_shared_library("g_mem_dfx") {
  sources = [ "glib-2.68.1/glibmemdfx/gmemdfx.cpp" ]

  include_dirs = [ "//commonlibrary/c_utils/base/include" ]

  cflags = [
    "-std=c++17",
    "-fno-rtti",
    "-fno-exceptions",
    "-Wall",
    "-fno-common",
    "-fstack-protector-strong",
    "-Wshadow",
    "-FPIC",
    "-FS",
    "-O2",
    "-D_FORTIFY_SOURCE=2",
    "-fvisibility=hidden",
    "-Wformat=2",
    "-Wfloat-equal",
    "-Wdate-time",
  ]

  configs = [ ":g_mem_dfx_config" ]

  external_deps = [
    "c_utils:utils",
    "faultloggerd:libdfx_dumpcatcher",
    "hisysevent_native:libhisysevent",
    "hitrace_native:hitrace_meter",
    "hiviewdfx_hilog_native:libhilog",
    "init:libbegetutil",
  ]

  subsystem_name = "thirdparty"
  part_name = "glib"
}
