# Copyright (c) Huawei Technologies Co., Ltd. 2021. All rights reserved.

import("//build/ohos.gni")
import("config.gni")

glib_path = rebase_path("//third_party/glib")
exec_script("install.sh", [ "$glib_path" ])

PCRE2_LIB_DIR = "//third_party/pcre2/pcre2"

ohos_shared_library("glibpcre") {
  md5_check_script = rebase_path("$PCRE2_LIB_DIR/check_md5.sh")
  _arguments_config = [
    rebase_path("$PCRE2_LIB_DIR/src/config.h.generic"),
    rebase_path("$PCRE2_LIB_DIR/src/config.h"),
  ]

  check_config_result =
      exec_script(md5_check_script, _arguments_config, "string")
  if (check_config_result == "") {
    exec_script("/usr/bin/env",
                [
                  "cp",
                  rebase_path("$PCRE2_LIB_DIR/src/config.h.generic"),
                  rebase_path("$PCRE2_LIB_DIR/src/config.h"),
                ])
  }

  _arguments_pcre2 = [
    rebase_path("$PCRE2_LIB_DIR/src/pcre2.h.generic"),
    rebase_path("$PCRE2_LIB_DIR/src/pcre2.h"),
  ]

  check_pcre2_result = exec_script(md5_check_script, _arguments_pcre2, "string")
  if (check_pcre2_result == "") {
    exec_script("/usr/bin/env",
                [
                  "cp",
                  rebase_path("$PCRE2_LIB_DIR/src/pcre2.h.generic"),
                  rebase_path("$PCRE2_LIB_DIR/src/pcre2.h"),
                ])
  }

  _arguments_pcre2_chartables = [
    rebase_path("$PCRE2_LIB_DIR/src/pcre2_chartables.c.dist"),
    rebase_path("$PCRE2_LIB_DIR/src/pcre2_chartables.c"),
  ]

  check_pcre2_chartables_result =
      exec_script(md5_check_script, _arguments_pcre2_chartables, "string")
  if (check_pcre2_chartables_result == "") {
    exec_script("/usr/bin/env",
                [
                  "cp",
                  rebase_path("$PCRE2_LIB_DIR/src/pcre2_chartables.c.dist"),
                  rebase_path("$PCRE2_LIB_DIR/src/pcre2_chartables.c"),
                ])
  }
  sources = [
    "$PCRE2_LIB_DIR/src/pcre2_auto_possess.c",
    "$PCRE2_LIB_DIR/src/pcre2_chartables.c",
    "$PCRE2_LIB_DIR/src/pcre2_compile.c",
    "$PCRE2_LIB_DIR/src/pcre2_config.c",
    "$PCRE2_LIB_DIR/src/pcre2_context.c",
    "$PCRE2_LIB_DIR/src/pcre2_convert.c",
    "$PCRE2_LIB_DIR/src/pcre2_dfa_match.c",
    "$PCRE2_LIB_DIR/src/pcre2_error.c",
    "$PCRE2_LIB_DIR/src/pcre2_extuni.c",
    "$PCRE2_LIB_DIR/src/pcre2_find_bracket.c",
    "$PCRE2_LIB_DIR/src/pcre2_jit_compile.c",
    "$PCRE2_LIB_DIR/src/pcre2_maketables.c",
    "$PCRE2_LIB_DIR/src/pcre2_match.c",
    "$PCRE2_LIB_DIR/src/pcre2_match_data.c",
    "$PCRE2_LIB_DIR/src/pcre2_newline.c",
    "$PCRE2_LIB_DIR/src/pcre2_ord2utf.c",
    "$PCRE2_LIB_DIR/src/pcre2_pattern_info.c",
    "$PCRE2_LIB_DIR/src/pcre2_script_run.c",
    "$PCRE2_LIB_DIR/src/pcre2_serialize.c",
    "$PCRE2_LIB_DIR/src/pcre2_string_utils.c",
    "$PCRE2_LIB_DIR/src/pcre2_study.c",
    "$PCRE2_LIB_DIR/src/pcre2_substitute.c",
    "$PCRE2_LIB_DIR/src/pcre2_substring.c",
    "$PCRE2_LIB_DIR/src/pcre2_tables.c",
    "$PCRE2_LIB_DIR/src/pcre2_ucd.c",
    "$PCRE2_LIB_DIR/src/pcre2_valid_utf.c",
    "$PCRE2_LIB_DIR/src/pcre2_xclass.c",
  ]
  include_dirs = [ "$PCRE2_LIB_DIR/src" ]
  cflags = [
    "-D_GNU_SOURCE",
    "-DHAVE_CONFIG_H",
    "-DSUPPORT_PCRE2_8=1",
    "-DPCRE2_CODE_UNIT_WIDTH=8",
    "-w",
  ]
  part_name = "glib"
  subsystem_name = "thirdparty"
}

group("glib_packages") {
  deps = [
    ":glib",
    ":gmodule",
    ":gobject",
  ]
}

config("glib_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "$GLIB_DIR",
    "$GLIB_DIR/glib/libcharset",
    "$GLIB_DIR/glib",
    "$GLIB_DIR/glib/deprecated",
    "//third_party/pcre2/pcre2/src",
    "//foundation/multimedia/media_standard/services/utils",
    "glibmemdfx",
  ]
  cflags = [
    "-DG_LOG_DOMAIN=\"GLib\"",
    "-DGLIB_CHARSETALIAS_DIR=\"system/lib64\"",
    "-DHAVE_MEMMOVE",
    "-DSUPPORT_UCP",
    "-DSUPPORT_UTF",
    "-DSUPPORT_UTF8",
    "-DNEWLINE=-1",
    "-DMATCH_LIMIT=10000000",
    "-DMATCH_LIMIT_RECURSION=8192",
    "-DMAX_NAME_SIZE=32",
    "-DMAX_NAME_COUNT=10000",
    "-DMAX_DUPLENGTH=30000",
    "-DLINK_SIZE=2",
    "-DPOSIX_MALLOC_THRESHOLD=10",
    "-DOHOS_OPT_COMPAT",
    "-UBSR_ANYCRLF",
    "-UEBCDIC",
    "-DGLIB_COMPILATION",
    "-Wno-sign-compare",
    "-Wno-unused-value",
    "-Wno-unused-function",
    "-Wno-int-conversion",
  ]
  if (is_standard_system) {
    cflags += [
      "-DG_MEM_DFX",
      "-DOHOS_OPT_PERFORMANCE",
    ]
  }
}

ohos_source_set("glib_source") {
  sources = [
    "$GLIB_DIR/glib/deprecated/gallocator.c",
    "$GLIB_DIR/glib/deprecated/gcache.c",
    "$GLIB_DIR/glib/deprecated/gcompletion.c",
    "$GLIB_DIR/glib/deprecated/grel.c",
    "$GLIB_DIR/glib/deprecated/gthread-deprecated.c",
    "$GLIB_DIR/glib/garcbox.c",
    "$GLIB_DIR/glib/garray.c",
    "$GLIB_DIR/glib/gasyncqueue.c",
    "$GLIB_DIR/glib/gatomic.c",
    "$GLIB_DIR/glib/gbacktrace.c",
    "$GLIB_DIR/glib/gbase64.c",
    "$GLIB_DIR/glib/gbitlock.c",
    "$GLIB_DIR/glib/gbookmarkfile.c",
    "$GLIB_DIR/glib/gbytes.c",
    "$GLIB_DIR/glib/gcharset.c",
    "$GLIB_DIR/glib/gchecksum.c",
    "$GLIB_DIR/glib/gconvert.c",
    "$GLIB_DIR/glib/gdataset.c",
    "$GLIB_DIR/glib/gdate.c",
    "$GLIB_DIR/glib/gdatetime.c",
    "$GLIB_DIR/glib/gdir.c",
    "$GLIB_DIR/glib/genviron.c",
    "$GLIB_DIR/glib/gerror.c",
    "$GLIB_DIR/glib/gfileutils.c",
    "$GLIB_DIR/glib/ggettext.c",
    "$GLIB_DIR/glib/ghash.c",
    "$GLIB_DIR/glib/ghmac.c",
    "$GLIB_DIR/glib/ghook.c",
    "$GLIB_DIR/glib/ghostutils.c",
    "$GLIB_DIR/glib/giochannel.c",
    "$GLIB_DIR/glib/giounix.c",
    "$GLIB_DIR/glib/gkeyfile.c",
    "$GLIB_DIR/glib/glib-init.c",
    "$GLIB_DIR/glib/glib-private.c",
    "$GLIB_DIR/glib/glib-unix.c",
    "$GLIB_DIR/glib/glist.c",
    "$GLIB_DIR/glib/gmain.c",
    "$GLIB_DIR/glib/gmappedfile.c",
    "$GLIB_DIR/glib/gmarkup.c",
    "$GLIB_DIR/glib/gmem.c",
    "$GLIB_DIR/glib/gmessages.c",
    "$GLIB_DIR/glib/gnode.c",
    "$GLIB_DIR/glib/goption.c",
    "$GLIB_DIR/glib/gpattern.c",
    "$GLIB_DIR/glib/gpoll.c",
    "$GLIB_DIR/glib/gprimes.c",
    "$GLIB_DIR/glib/gprintf.c",
    "$GLIB_DIR/glib/gqsort.c",
    "$GLIB_DIR/glib/gquark.c",
    "$GLIB_DIR/glib/gqueue.c",
    "$GLIB_DIR/glib/grand.c",
    "$GLIB_DIR/glib/grcbox.c",
    "$GLIB_DIR/glib/grefcount.c",
    "$GLIB_DIR/glib/grefstring.c",
    "$GLIB_DIR/glib/gregex.c",
    "$GLIB_DIR/glib/gscanner.c",
    "$GLIB_DIR/glib/gsequence.c",
    "$GLIB_DIR/glib/gshell.c",
    "$GLIB_DIR/glib/gslice.c",
    "$GLIB_DIR/glib/gslist.c",
    "$GLIB_DIR/glib/gspawn.c",
    "$GLIB_DIR/glib/gstdio.c",
    "$GLIB_DIR/glib/gstrfuncs.c",
    "$GLIB_DIR/glib/gstring.c",
    "$GLIB_DIR/glib/gstringchunk.c",
    "$GLIB_DIR/glib/gtestutils.c",
    "$GLIB_DIR/glib/gthread-posix.c",
    "$GLIB_DIR/glib/gthread.c",
    "$GLIB_DIR/glib/gthreadpool.c",
    "$GLIB_DIR/glib/gtimer.c",
    "$GLIB_DIR/glib/gtimezone.c",
    "$GLIB_DIR/glib/gtrace.c",
    "$GLIB_DIR/glib/gtranslit.c",
    "$GLIB_DIR/glib/gtrashstack.c",
    "$GLIB_DIR/glib/gtree.c",
    "$GLIB_DIR/glib/gunibreak.c",
    "$GLIB_DIR/glib/gunicollate.c",
    "$GLIB_DIR/glib/gunidecomp.c",
    "$GLIB_DIR/glib/guniprop.c",
    "$GLIB_DIR/glib/guri.c",
    "$GLIB_DIR/glib/gutf8.c",
    "$GLIB_DIR/glib/gutils.c",
    "$GLIB_DIR/glib/gutilsprivate.h",
    "$GLIB_DIR/glib/guuid.c",
    "$GLIB_DIR/glib/gvariant-core.c",
    "$GLIB_DIR/glib/gvariant-parser.c",
    "$GLIB_DIR/glib/gvariant-serialiser.c",
    "$GLIB_DIR/glib/gvariant.c",
    "$GLIB_DIR/glib/gvarianttype.c",
    "$GLIB_DIR/glib/gvarianttypeinfo.c",
    "$GLIB_DIR/glib/gversion.c",
    "$GLIB_DIR/glib/gwakeup.c",
    "$GLIB_DIR/glib/libcharset/localcharset.c",
  ]

  configs = [ ":glib_config" ]
}
ohos_shared_library("glib") {
  deps = [
    ":glib_source",
    "//third_party/glib:glibpcre",
  ]
  if (is_standard_system) {
    deps += [ ":g_mem_dfx" ]
  }
  part_name = "glib"
  subsystem_name = "thirdparty"
}

config("gmodule_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "$GLIB_DIR",
    "$GLIB_DIR/gmodule",
    "$GLIB_DIR/glib",
  ]
  cflags = [ "-DG_LOG_DOMAIN=\"GModule\"" ]
}

ohos_source_set("gmodule_source") {
  sources = [ "$GLIB_DIR/gmodule/gmodule.c" ]

  configs = [ ":gmodule_config" ]
}
ohos_shared_library("gmodule") {
  deps = [
    ":glib",
    ":gmodule_source",
  ]
  part_name = "glib"
  subsystem_name = "thirdparty"
}

config("gobject_config") {
  visibility = [ ":*" ]
  include_dirs = [
    "$GLIB_DIR",
    "$GLIB_DIR/gobject",
    "$GLIB_DIR/glib",
    "//third_party/libffi/include",
  ]
  cflags = [
    "-DG_LOG_DOMAIN=\"GObject\"",
    "-DGOBJECT_COMPILATION",
    "-Wno-sign-compare",
    "-Wno-unused-function",
    "-Wno-int-conversion",
  ]
}

ohos_source_set("gobject_source") {
  sources = [
    "$GLIB_DIR/gobject/gatomicarray.c",
    "$GLIB_DIR/gobject/gbinding.c",
    "$GLIB_DIR/gobject/gboxed.c",
    "$GLIB_DIR/gobject/gclosure.c",
    "$GLIB_DIR/gobject/genums.c",
    "$GLIB_DIR/gobject/gmarshal.c",
    "$GLIB_DIR/gobject/gobject.c",
    "$GLIB_DIR/gobject/gparam.c",
    "$GLIB_DIR/gobject/gparamspecs.c",
    "$GLIB_DIR/gobject/gsignal.c",
    "$GLIB_DIR/gobject/gsourceclosure.c",
    "$GLIB_DIR/gobject/gtype.c",
    "$GLIB_DIR/gobject/gtypemodule.c",
    "$GLIB_DIR/gobject/gtypeplugin.c",
    "$GLIB_DIR/gobject/gvalue.c",
    "$GLIB_DIR/gobject/gvaluearray.c",
    "$GLIB_DIR/gobject/gvaluetransform.c",
    "$GLIB_DIR/gobject/gvaluetypes.c",
  ]

  configs = [ ":gobject_config" ]
}

ohos_shared_library("gobject") {
  deps = [
    ":glib",
    ":gobject_source",
    "//third_party/libffi:ffi",
  ]
  part_name = "glib"
  subsystem_name = "thirdparty"
}

#############################################################################
#############################################################################
#############################################################################

config("g_mem_dfx_config") {
  include_dirs = [
    "$GLIB_DIR/glibmemdfx",
    "//commonlibrary/c_utils/base/include",
    "//foundation/multimedia/media_standard/interfaces/inner_api/native",
    "//base/hiviewdfx/hisysevent/interfaces/native/innerkits/hisysevent/include",
  ]
}

ohos_shared_library("g_mem_dfx") {
  sources = [ "$GLIB_DIR/glibmemdfx/gmemdfx.cpp" ]

  include_dirs = [ "//commonlibrary/c_utils/base/include" ]

  cflags = [
    "-std=c++17",
    "-fno-rtti",
    "-fno-exceptions",
    "-Wall",
    "-fno-common",
    "-fstack-protector-strong",
    "-Wshadow",
    "-FPIC",
    "-FS",
    "-O2",
    "-D_FORTIFY_SOURCE=2",
    "-fvisibility=hidden",
    "-Wformat=2",
    "-Wfloat-equal",
    "-Wdate-time",
  ]

  configs = [ ":g_mem_dfx_config" ]

  external_deps = [
    "c_utils:utils",
    "faultloggerd:libdfx_dumpcatcher",
    "hisysevent_native:libhisysevent",
    "hitrace_native:hitrace_meter",
    "hiviewdfx_hilog_native:libhilog",
    "init:libbegetutil",
  ]

  subsystem_name = "thirdparty"
  part_name = "glib"
}
